fix routing issues

--- a/public2/index.html
+++ b/public2/index.html
@@ -87,9 +87,13 @@
 
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script> -->
-    <script src="../node_modules/angular/angular.min.js"></script>
-    <script src="../node_modules/angular-route/angular-route.min.js"></script>
     <!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script> -->
+<!--
+    <script src="../node_modules/angular/angular.min.js"></script>
+    <script src="../node_modules/angular-route/angular-route.min.js"></script> -->
+
+    <script src="./angular.min.js"></script>
+    <script src="./angular-route.min.js"></script>
 
     <!-- jQuery -->
     <script src="./vendor/jquery/jquery.min.js"></script>
