changing file names

--- a/public2/pages/calendar.html
+++ b/public2/pages/calendar.html
@@ -13,14 +13,14 @@
 
 
 	<div class="row">
-    <img class="wrapper img-responsive" src="img/calendar/calendar_01.jpg" alt="">
+    <img class="wrapper img-responsive" src="../img/calendar/calendar_01.jpg" alt="">
   </div>
 	<div class="row">
     <div class="col-md-6">
-      <img class="img-responsive" src="img/calendar/calendar_03.png" alt="">
+      <img class="img-responsive" src="../img/calendar/calendar_03.png" alt="">
     </div>
     <div class="col-md-6">
-      <img class="img-responsive" src="img/calendar/calendar_04.png" alt="">
+      <img class="img-responsive" src="../img/calendar/calendar_04.png" alt="">
     </div>
   </div>
 
@@ -36,27 +36,27 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img class="first-slide" src="img/calendar/calendar_05.jpg" alt="First slide">
+        <img class="first-slide" src="../img/calendar/calendar_05.jpg" alt="First slide">
         <div class="container">
         </div>
       </div>
       <div class="item">
-        <img class="second-slide" src="img/calendar/calendar_06.jpg" alt="Second slide">
+        <img class="second-slide" src="../img/calendar/calendar_06.jpg" alt="Second slide">
         <div class="container">
         </div>
       </div>
       <div class="item">
-        <img class="third-slide" src="img/calendar/calendar_07.jpg" alt="Third slide">
+        <img class="third-slide" src="../img/calendar/calendar_07.jpg" alt="Third slide">
         <div class="container">
         </div>
       </div>
       <div class="item">
-        <img class="third-slide" src="img/calendar/calendar_08.jpg" alt="Third slide">
+        <img class="third-slide" src="../img/calendar/calendar_08.jpg" alt="Third slide">
         <div class="container">
         </div>
       </div>
       <div class="item">
-        <img class="third-slide" src="img/calendar/calendar_09.jpg" alt="Third slide">
+        <img class="third-slide" src="../img/calendar/calendar_09.jpg" alt="Third slide">
         <div class="container">
         </div>
       </div>
