--- a/public2/pages/netflix.html
+++ b/public2/pages/netflix.html
@@ -11,10 +11,10 @@
 
 
 	<div class="row">
-    <img class="wrapper img-responsive" src="img/netflix/netflix_01.png" alt="">
+    <img class="wrapper img-responsive" src="../img/netflix/netflix_01.png" alt="">
   </div>
 	<div class="row">
-    <img class="wrapper img-responsive" src="img/netflix/netflix_02.png" alt="">
+    <img class="wrapper img-responsive" src="../img/netflix/netflix_02.png" alt="">
   </div>
 
   <div class="row">
