--- a/public2/pages/stickers.html
+++ b/public2/pages/stickers.html
@@ -28,7 +28,7 @@
 
 	<div class="row">
     <div class="embed-responsive embed-responsive-16by9">
-      <video controls poster="img/stickers/stickers_07.png">
+      <video controls poster="../img/stickers/stickers_07.png">
         <source src="img/stickers/preview.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
