added alley page and edited video files

--- a/public2/index.html
+++ b/public2/index.html
@@ -64,10 +64,10 @@
             <li><a href="#calendar">2017 Calendar</a></li>
             <li><a href="#superhero">Superhero Diversity</a></li>
             <li><a href="#blush">Blush</a></li>
-            <li><a href="#netflix">Netflix</a></li>
+            <li><a href="#alley">Alley</a></li>
             <li><a href="#wm">Won &amp; McKenzie</a></li>
             <li><a href="#ace">Ace</a></li>
-            <li><a href="#alley">Demo Reel</a></li>
+            <li><a href="#demo">Demo Reel</a></li>
           </ul>
         </li>
       </ul>
