--- a/public2/pages/home.html
+++ b/public2/pages/home.html
@@ -66,9 +66,9 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-margin hover-container">
-					<a href="#netflix"><img class="center-block img-responsive hover-image" src="img/home/Netflix1.png" alt=""></a>
+					<a href="#alley"><img class="center-block img-responsive hover-image" src="img/home/alley_05.png" alt=""></a>
 					<div class="middle">
-						<a href="#netflix"><div class="hover-text text-center bold">Netflix</div></a>
+						<a href="#alley"><div class="hover-text text-center bold">Alley</div></a>
 					</div>
 				</div>
 			</div>
@@ -87,9 +87,9 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-margin hover-container">
-					<a href="#alley"><img class="center-block img-responsive hover-image" src="img/home/Demo.png" alt=""></a>
+					<a href="#demo"><img class="center-block img-responsive hover-image" src="img/home/demo.png" alt=""></a>
 					<div class="middle">
-						<a href="#alley"><div class="hover-text text-center bold">Demo Reel</div></a>
+						<a href="#demo"><div class="hover-text text-center bold">Demo Reel</div></a>
 					</div>
 				</div>
 			</div>
