--- a/public2/pages/ace.html
+++ b/public2/pages/ace.html
@@ -27,7 +27,7 @@
     <div class="col-md-4 col-md-offset-8 hover-text text-left group">
       Next Project
       <hr>
-      <a href="#alley">
+      <a href="#demo">
         <h3>Demo Reel &nbsp; </h3>
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
