--- a/public2/pages/blush.html
+++ b/public2/pages/blush.html
@@ -34,8 +34,8 @@
     <div class="col-md-4 col-md-offset-8 hover-text text-left group">
       Next Project
       <hr>
-      <a href="#netflix">
-        <h3>Netflix &nbsp; </h3>
+      <a href="#alley">
+        <h3>Alley &nbsp; </h3>
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
     </div>
