--- a/public2/pages/superhero.html
+++ b/public2/pages/superhero.html
@@ -11,11 +11,19 @@
     </div>
   </div>
 
-	<div class="row">
+	<!-- <div class="row">
 		<div class="embed-responsive embed-responsive-16by9">
 			<iframe class="embed-responsive-item" src="https://player.vimeo.com/video/186049547" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div>
-	</div>
+	</div> -->
+  <div class="embed-responsive embed-responsive-16by9">
+    <video controls poster="img/superhero/sh.png">
+      <source src="img/superhero/superhero.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+
 	<div class="row">
     <img class="wrapper img-responsive" src="img/superhero/superheroes_01.png" alt="">
   </div>
