--- a/public2/pages/stickers.html
+++ b/public2/pages/stickers.html
@@ -4,12 +4,7 @@
     <h1>Stickers</h1>
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6">
       <p>
-        During my internship at Big Tent Entertainment I managed Domokun’s social
-				media accounts, researching, conceptualizing and creating original artwork
-				for its Instagram and Facebook. In addition to working for Domo, I created
-				original graphic assets, GIFs and eCards for clients Hallmark, KeyG and
-				Miffy and Friends.  As part of a revamp for KeyG, i redesigned the UI
-				for its webpage and mobile app.
+       Stickers is a game that I'm currently developing both for the mobile (2D version) and the PC (3D version). Characters are all original, first illustrated digitally and then transposed into Maya to be 3D modeled and animated. The story follows a little girl named Lolly who meets an alien sticker Pin. He reveals an imaginary world unknown to Lolly, showing her adventures and puzzles to solve as she makes her way to school and back.
       </p>
     </div>
   </div>
