--- a/public2/pages/about.html
+++ b/public2/pages/about.html
@@ -1,20 +1,32 @@
-<div class="container-fluid text-left about">
+<div class="container-fluid text-center portfolio-padding">
+ 
+   
+    <h1>About</h1>
+    <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6 portfolio-padding">
+        <p>
+        Hello, I'm a multidisciplinary Designer from NYC.
+        </p>
+        <p>
+				
+                    I have a passion for interactive design, from building UI to developing games.
+               
+    <div class ="portfolio-padding">
+				<h4>
+                    I have worked with
+                </h4>
+        </div>
+      </p>
+    </div>
 
-	<div class="col-md-4">
-		<h1>About</h1>
-		<br>
-		<h4>Joel Min Jun Wong</h4>
-		<div class="color-text">
-			B.A. Communications &amp; New Media
-			<br>
-			A.O.S. Digital Design &amp; Interactive Media
-		</div>
-		<br>
-		<p>A designer based in New York City, inspired by the crowded park benches and lonely afternoon walks. </p>
-		<p>The city is my canvas and my mentor, a mirror of dreams, reflecting faces and footsteps from distant worlds. </p>
-		<p>Finishing up my second year of post graduate degree, I hope to wander into the lush realm of creativity and personalities radiating in abundance on the streets, penning them down in serenity.</p>
-		<p>Interested in working together? Contact me at: <a class="color-text" href="mailto:mypapercat@gmail.com?Subject=Let's%20Work%20Together!" target="_top">mypapercat@gmail.com</a></p>
-		<p>Or download my resume <a class="color-text" href="https://media.wix.com/ugd/babf40_4a67a2222e4c4f6f84131a72065d870a.pdf">here</a></p>
+
+
+	<div class="row">
+    <img class="wrapper img-responsive" src="img/logo/logo.png" alt="">
+  </div>
+	
+
+  <p><h4>Interested in working together? Contact me at: <a class="color-text" href="mailto:mypapercat@gmail.com?Subject=Let's%20Work%20Together!" target="_top">mypapercat@gmail.com</a></h4></p>
+		<p><h4>Or download my resume <a class="color-text" href="https://media.wix.com/ugd/babf40_4a67a2222e4c4f6f84131a72065d870a.pdf">here.</a></h4></p>
 		<br>
 		<div class="icons">
 			<ul>
@@ -22,6 +34,5 @@
 		    <li><a href="https://www.behance.net/mypapercat"><i class="fa fa-behance"></i></a></li>
 			</ul>
 		</div>
-	</div>
 
 </div>
