--- a/public2/pages/alley.html
+++ b/public2/pages/alley.html
@@ -4,7 +4,7 @@
     <h1>Demo Reel</h1>
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6">
       <p>
-				Welcome package design for Alley.
+				A collection of my motion work throughout the years.
       </p>
     </div>
   </div>
